# ZLENS_DC_PRJ

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  STM32F103RCTX_FLASH.ld  ZLENS_DC.ioc  readme.txt
.claude/: settings-local-readme.md
App/Inc/: adc_filter.hpp  app_instances.hpp  comm_protocol.hpp  crc16.hpp  encoder.hpp  flash_config.hpp  fram_storage.hpp  hw_constants.hpp  motor_ctrl.hpp  pid_ctrl.hpp  power_monitor.hpp  self_test.hpp  stall_detect.hpp  swo_debug.hpp  system_manager.hpp  zoom_table.hpp
App/Src/: adc_filter.cpp  app_instances.cpp  comm_protocol.cpp  crc16.cpp  encoder.cpp  flash_config.cpp  fram_storage.cpp  motor_ctrl.cpp  power_monitor.cpp  self_test.cpp  stall_detect.cpp  swo_debug.cpp  system_manager.cpp  zoom_table.cpp
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_tim.c  stm32f1xx_it.c
Tasks/Inc/: comm_task.hpp  monitor_task.hpp  motor_task.hpp  storage_task.hpp  task_config.hpp
Tasks/Src/: comm_task.cpp  monitor_task.cpp  motor_task.cpp  storage_task.cpp
Test/: CMakeLists.txt  test_adc_filter.cpp  test_comm_protocol.cpp  test_comm_task.cpp  test_crc16.cpp  test_encoder.cpp  test_flash_config.cpp  test_fram_storage.cpp  test_monitor_task.cpp  test_motor_ctrl.cpp  test_motor_task.cpp  test_pid_ctrl.cpp  test_power_monitor.cpp  test_self_test.cpp  test_stall_detect.cpp  test_storage_task.cpp  test_system_manager.cpp  test_zoom_table.cpp
Test/diag/: CMakeLists.txt  current_profile_diag.cpp  phase3_motor_diag.cpp  phase4_heat_diag.cpp  pid_repeat_diag.cpp  pid_tune_diag.cpp  zoom_precision_diag.cpp  zoom_precision_diag_homing.cpp
Test/mocks/: mock_freertos.cpp  mock_freertos.hpp  mock_hal.cpp  mock_hal.hpp  stm32f1xx_hal.h
cmake/: stm32f103rc.cmake  stm32f1xx.ld
docs/: TEMPLATE.md  architecture.md  coding-style.md  hw_notes.md  progress.md
docs/delivery/: 2.5x_err.md  architecture.md  flash-guide.md  handover.md  pin-peripheral-map.md  protocol-spec.md  stall-overcurrent-calibration.md  storage-map.md  user-guide.md
docs/dev/: TEMPLATE.md  build-flash-swo-workflow.md  count_pixel_err.md  progress.md
docs/phases/phase1-core-modules/: plan.md  review.md  verify.md
docs/phases/phase2-freertos-tasks/: plan.md  review.md  verify.md
docs/phases/phase3-motor-logic/: plan.md  review.md  verify.md
docs/phases/phase4-power-selftest/: plan.md  review.md  verify.md
docs/phases/phase5-integration/: plan.md  review.md  verify.md
docs/phases/phase6-protocol-v25/: plan.md  review.md  verify.md
docs/phases/phase7-backlash-accuracy/: a4950-vref-fix-spec.md  encoder-stall-homing-spec.md  gear-ratio-fix-plan.md  gear-ratio-fix-spec.md  hardcode-cleanup-plan.md  hardcode-cleanup-spec.md  plan.md  review.md  stall-current-report.md  verify.md  workflow.md
docs/phases/phase8-as5311-encoder/: plan.md  review.md  spec.md  verify.md
docs/phases/phase9-storage-refactor/: plan.md
docs/ref/: 电动镜头通信协议v2.5.docx  电动镜头通信协议v2.7.docx
docs/req/: CMS16_MAG_ANGLE.csv  motor_ctrl_strategy_discussion.md  项目需求报告.md
docs/superpowers/plans/: 2026-03-16-zlens-dc-implementation.md  2026-03-20-backlash-accuracy.md
docs/superpowers/specs/: 2026-03-16-zlens-dc-design.md  2026-03-20-backlash-accuracy-design.md
scripts/: flash_and_test.sh  full_cmd_test.py  integration_full.sh  integration_test.py  itm_decode.py  openocd.cfg  parse_swo.py  phase10_factory_verify.py  phase6_verify.py  phase7_verify.py  phase8_speed_verify.py  phase8_verify.py  pid_tune_auto.py  pid_tune_demo.py  run_current_diag.sh  run_selftest.sh  selftest_swo.sh  swo_capture_test.sh  swo_live.sh  uart_debug.py  uart_loopback.py  uart_monitor.py  zoom_drift_diag.py
